--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -10,6 +10,7 @@
   -webkit-animation-delay: 0.15s;
           animation-delay: 0.15s;
   z-index: 20;
+  color: #651e1e;
 
   &__inner-wrap {
     @include container;
