--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'Open Sans';
-  src: url('/assets/fonts/OpenSans-Regular.ttf') format('truetype');
+  font-family: 'Lora';
+  src: url('/assets/fonts/Lora-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lora', Lora-Medium;
 }
