--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size              : 20;
+$doc-font-size              : 20px !important;
 
 /* paragraph indention */
 $paragraph-indent           : false; // true, false (default)
