--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -55,6 +55,10 @@
     border-bottom: 1px solid $border-color;
   }
 
+  li {
+    font-size: 1em;
+   padding-left: 5px;
+  }
   p, li, dl {
     font-size: 1em;
   }
